test_suite/tests/ui/transparent/unit_struct.stderr
error: #[serde(transparent)] is not allowed on a unit struct
 --> tests/ui/transparent/unit_struct.rs:4:1
  |
3 |   #[derive(Serialize)]
  |            --------- in this derive macro expansion
4 | / #[serde(transparent)]
5 | | struct S;
  | |_________^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
