test_suite/tests/ui/transparent/unit_struct.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde(transparent)]
struct S;

fn main() {}
